# pd-server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.txt
cmake/: PdPlatform.cmake  build_options.cmake  version.cmake
pd/: CMakeLists.txt
pure-data-src/ceammc/ext/doc/: conv.samp2sec-help.pd  local.int-help.pd  math.gcd-help.pd
pure-data-src/ceammc/ext/src/lib/: ceammc_atom.h  ceammc_atomlist.h
pure-data-src/src/: m_class.c  m_pd.h  s_loader.c  x_ceammc.c  x_ceammc.h
src/: pd-server_global.h  pdLib.cpp  pdLib.hpp  pdServer.cpp  pdServer.hpp  pdUpdate.hpp
src/qmake-build/: Makefile  libpd-server.1.0.0.dylib
src/qt-creator-project/: .qmake.stash  Makefile  Makefile.pd-server  Makefile.pd-server-tests  Makefile.pd-server.Debug  pd-server-tests  pd-server-tests.pro  pd-server.pro  pd-server_global.h
src/qt-creator-project/build-pd-server-Desktop_Qt_5_8_0_clang_64bit-Debug/: Makefile  libpd-server.1.0.0.dylib  libpd-server.1.dylib
tests/: pd-server-tests.cpp
